--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,23 @@ rust: nightly
 sudo: required
 services:
   - docker
+env:
+  - LLVM_CONFIG=$(which llvm-config-3.8) CXX=$(which g++-4.9)
+  - LLVM_CONFIG=$(which llvm-config-3.8) CXX=$(which clang++)
 os:
   - linux
   - osx
+addons:
+  apt:
+    sources:
+      - llvm-toolchain-precise
+      - llvm-toolchain-precise-3.8
+      - ubuntu-toolchain-r-test
+    packages:
+      - g++-4.9
+      - clang-3.8
+      - llvm-3.8
+      - llvm-3.8-dev
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update; fi
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew unlink gcc; fi
